[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bytes"
description = "A modular Python library that I use in many of my projects"
dynamic = ["version"]
version = {attr = "dotfiles.__version__", default = "v0.1.0"}
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
	{ name = "Ragdata", email = "ragdata@ragdata.dev" }
]
keywords = [
	"library",
	"modular",
	"Python",
	"reusable",
	"cli"
]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: Implementation :: CPython",
	"Programming Language :: Python :: Implementation :: PyPy",
	"Topic :: Software Development :: Libraries",
	"Topic :: Utilities",
	"Typing :: Typed"
]
dependencies = [
	"typer>=0.9.0",
	"pyyaml>=5.4.1"
]

[project.urls]
Repository = "https://github.com/ragdata/pythonbytes.git"
Issues = "https://github.com/ragdata/pythonbytes/issues"

[project.optional-dependencies]
"dev" = [
	"pytest>=6.2.4",
]
"docs" = []

[project.scripts]

[tool.setuptools.dynamic]
version = {attr = "pythonbytes.__version__"}
